--- a/index.html
+++ b/index.html
@@ -49,9 +49,13 @@
             font-size: 16px;
         }
 
-        .contact-info i {
-            margin-right: 10px;
+        .contact-info a {
             color: #ffd700;
+            text-decoration: none;
+        }
+
+        .contact-info a:hover {
+            text-decoration: underline;
         }
 
         .section {
@@ -136,17 +140,17 @@
     <div class="overlay">
         <header>
             <!-- COMPANY LOGO -->
-            <img src="sd-logo.jpeg" alt="SD FOAM INDUSTRIES Logo" />
+            <img src="images/sd-logo.jpeg" alt="SD FOAM INDUSTRIES Logo" />
             <h1>SD FOAM INDUSTRIES</h1>
             <p>Mangala to Sahidawali Road, Village Mangala, Sirsa-125055 (Haryana)</p>
         </header>
 
         <div class="contact-info">
-            <p><i class="fas fa-envelope"></i> sdfomindustries@gmail.com</p>
-            <p><i class="fas fa-phone"></i> 8950496914 (Office)</p>
-            <p><i class="fas fa-phone"></i> 8571042210 (Mr. Deepak Kumar)</p>
-            <p><i class="fas fa-phone"></i> 8368926021 (General Manager Mr. Dinesh Giri)</p>
-            <p><i class="fas fa-phone"></i> 7347683905 (SR SALES MANAGER Mr. Pawan)</p>
+            <p><i class="fas fa-phone"></i> <a href="tel:+918950496914">8950496914 (Office)</a> | <a href="https://wa.me/918950496914" target="_blank">WhatsApp</a></p>
+            <p><i class="fas fa-phone"></i> <a href="tel:+918571042210">8571042210 (Mr. Deepak Kumar)</a> | <a href="https://wa.me/918571042210" target="_blank">WhatsApp</a></p>
+            <p><i class="fas fa-phone"></i> <a href="tel:+918368926021">8368926021 (General Manager Mr. Dinesh Giri)</a> | <a href="https://wa.me/918368926021" target="_blank">WhatsApp</a></p>
+            <p><i class="fas fa-phone"></i> <a href="tel:+917347683905">7347683905 (SR SALES MANAGER Mr. Pawan)</a> | <a href="https://wa.me/917347683905" target="_blank">WhatsApp</a></p>
+            <p><i class="fas fa-envelope"></i> <a href="mailto:sdfoamindustries@gmail.com">sdfoamindustries@gmail.com</a></p>
         </div>
 
         <!-- About Us -->
@@ -158,31 +162,32 @@
         <!-- Visiting Card -->
         <div class="section">
             <h2>Our Visiting Card</h2>
-            <img src="visiting-card.jpeg" alt="Visiting Card" />
+            <img src="images/product1.jpeg" alt="Visiting Card" />
         </div>
 
         <!-- Factory / Product Photos -->
         <div class="section">
             <h2>Our Factory & Products</h2>
-            <img src="product1.jpeg" alt="Photo 1" />
-            <img src="product2.jpeg" alt="Photo 2" />
-            <img src="product3.jpeg" alt="Photo 3" />
-            <img src="product4.jpeg" alt="Photo 4" />
-            <img src="product5.jpeg" alt="Photo 5" />
-            <img src="product6.jpeg" alt="Photo 6" />
-            <img src="product7.jpeg" alt="Photo 7" />
+            <img src="images/product2.jpeg" alt="Product 1" />
+            <img src="images/product3.jpeg" alt="Product 2" />
+            <img src="images/product4.jpeg" alt="Product 3" />
+            <img src="images/product5.jpeg" alt="Product 4" />
+            <img src="images/product6.jpeg" alt="Product 5" />
+            <img src="images/product7.jpeg" alt="Product 6" />
+            <img src="images/product8.jpeg" alt="Product 7" />
+            <img src="images/product9.jpeg" alt="Product 8" />
         </div>
 
         <!-- PDF Download -->
         <div class="section">
             <h2>Download Our Catalogue</h2>
-            <a class="button" href="catalogue.pdf" target="_blank">Download PDF</a>
+            <a class="button" href="pdf/catalogue.pdf" target="_blank">Download PDF</a>
         </div>
 
         <!-- Contact Form -->
         <div class="contact-form">
             <h2>Contact Us</h2>
-            <form action="mailto:sdfomindustries@gmail.com" method="post" enctype="text/plain">
+            <form action="mailto:sdfoamindustries@gmail.com" method="post" enctype="text/plain">
                 <input type="text" name="name" placeholder="Your Name" required />
                 <input type="email" name="email" placeholder="Your Email" required />
                 <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
