--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 <body>
 
 <header>
-    <img src="assets/logo.png" alt="SD Foam Industries Logo" />
+    <img src="assets/logo.png" />
 </header>
 
 <main>
