--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
 <body>
 
 <header>
-    <img src="assets/logo.png" alt="SD Foam Industries Logo" />
+    <img src="assets/logo.png" alt="Logo" />
 </header>
 
 <main>
     <h1>Welcome to SD Foam Industries</h1>
     <p>Your trusted manufacturer of quality foam products.</p>
     
-    <a href="assets/product1.pdf" target="_blank" class="pdf-link">Download Product PDF</a>
+   <a href="assets/product1.pdf" target="_blank">Download Product PDF</a>
 
     <div class="contact-info">
         <h2>Contact Us</h2>
