--- a/index.html
+++ b/index.html
@@ -1,106 +1,155 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>SD Foam Industries</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background: url('assets/background.jpg') no-repeat center center fixed;
-            background-size: cover;
-        }
-        header {
-            background-color: rgba(0, 64, 128, 0.8);
-            padding: 20px;
-            text-align: center;
-            color: white;
-        }
-        header img {
-            max-width: 150px;
-            height: auto;
-        }
-        main {
-            padding: 20px;
-            max-width: 800px;
-            margin: 40px auto;
-            background: rgba(255, 255, 255, 0.9);
-            box-shadow: 0 0 10px #ccc;
-            border-radius: 8px;
-        }
-        h1 {
-            color: #004080;
-        }
-        a.pdf-link {
-            display: inline-block;
-            margin-top: 15px;
-            padding: 10px 15px;
-            background-color: #008000;
-            color: white;
-            text-decoration: none;
-            border-radius: 4px;
-        }
-        a.pdf-link:hover {
-            background-color: #005900;
-        }
-        .contact-info {
-            margin-top: 30px;
-            font-size: 16px;
-            line-height: 1.6;
-        }
-        .whatsapp-button {
-            position: fixed;
-            bottom: 25px;
-            right: 25px;
-            background-color: #25D366;
-            border-radius: 50%;
-            width: 60px;
-            height: 60px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.3);
-            cursor: pointer;
-            z-index: 1000;
-        }
-        .whatsapp-button img {
-            width: 35px;
-            height: 35px;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>SD Foam Industries</title>
+
+  <style>
+    /* Background image with overlay */
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: url('assets/background.jpg') no-repeat center center fixed;
+      background-size: cover;
+      position: relative;
+      min-height: 100vh;
+      color: #fff;
+    }
+
+    /* Dark overlay for better text visibility */
+    body::before {
+      content: "";
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background-color: rgba(0, 0, 0, 0.6);
+      z-index: -1;
+    }
+
+    header {
+      background-color: rgba(0, 64, 128, 0.8);
+      padding: 15px;
+      text-align: center;
+      border-bottom: 3px solid #00cc44;
+    }
+
+    header img {
+      max-width: 180px;
+      height: auto;
+    }
+
+    main {
+      background-color: rgba(0, 0, 0, 0.6);
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 30px 25px;
+      border-radius: 10px;
+      box-shadow: 0 0 20px #00cc44;
+    }
+
+    h1 {
+      margin-top: 0;
+      color: #00cc44;
+      font-weight: 700;
+      font-size: 2.5rem;
+      text-align: center;
+    }
+
+    p {
+      font-size: 1.1rem;
+      line-height: 1.6;
+      margin-bottom: 20px;
+    }
+
+    a.pdf-link {
+      display: inline-block;
+      margin: 15px 0 25px 0;
+      padding: 12px 22px;
+      background-color: #00cc44;
+      color: #000;
+      font-weight: 700;
+      text-decoration: none;
+      border-radius: 6px;
+      transition: background-color 0.3s ease;
+    }
+
+    a.pdf-link:hover {
+      background-color: #009933;
+      color: white;
+    }
+
+    .contact-info h2 {
+      color: #00cc44;
+      margin-bottom: 12px;
+      font-weight: 700;
+      text-align: center;
+    }
+
+    .contact-info p, .contact-info a {
+      color: #fff;
+      font-size: 1rem;
+      margin: 5px 0;
+      text-align: center;
+      text-decoration: none;
+    }
+
+    .contact-info a:hover {
+      text-decoration: underline;
+    }
+
+    /* WhatsApp Floating Button */
+    .whatsapp-button {
+      position: fixed;
+      bottom: 25px;
+      right: 25px;
+      background-color: #25D366;
+      border-radius: 50%;
+      width: 60px;
+      height: 60px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      box-shadow: 0 3px 8px rgba(0,0,0,0.3);
+      cursor: pointer;
+      z-index: 10000;
+      transition: background-color 0.3s ease;
+    }
+
+    .whatsapp-button:hover {
+      background-color: #1DA851;
+    }
+
+    .whatsapp-button img {
+      width: 32px;
+      height: 32px;
+    }
+  </style>
 </head>
+
 <body>
+  <header>
+    <img src="assets/logo.png" alt="SD Foam Industries Logo" />
+  </header>
 
-<header>
-    <img src="assets/logo.png" alt="Logo" />
-</header>
-
-<main>
+  <main>
     <h1>Welcome to SD Foam Industries</h1>
-    <p>Your trusted manufacturer of quality foam products.</p>
+    <p>Your trusted manufacturer of quality foam and mattress products.</p>
 
-    <!-- PDF Download Links -->
-    <a href="assets/product1.pdf" class="pdf-link" target="_blank">Download Product PDF 1</a>
-    <br>
-    <a href="assets/product2.pdf" class="pdf-link" target="_blank">Download Product PDF 2</a>
+    <a href="assets/product1.pdf" target="_blank" class="pdf-link" download>Download Product PDF</a>
 
-    <!-- Contact Information -->
     <div class="contact-info">
-        <h2>Contact Us</h2>
-        <p>Address: Mangala to Sahidawali Road, Village Mangala, Sirsa-125055 (Haryana)</p>
-        <p>Email: <a href="mailto:sdfoamindustries@gmail.com">sdfoamindustries@gmail.com</a></p>
-        <p>Phone (Office): 8950496914</p>
-        <p>Mobile (Mr. Deepak Kumar): 8571042210</p>
-        <p>General Manager (Mr. Dinesh Giri): 8368926021</p>
+      <h2>Contact Us</h2>
+      <p>Address: Mangala to Sahidawali Road, Village Mangala, Sirsa-125055 (Haryana)</p>
+      <p>Email: <a href="mailto:sdf oamindustries@gmail.com">sdf oamindustries@gmail.com</a></p>
+      <p>Phone (Office): 8950496914</p>
+      <p>Mobile (Mr. Deepak Kumar): 8571042210</p>
+      <p>General Manager (Mr. Dinesh Giri): 8368926021</p>
     </div>
-</main>
+  </main>
 
-<!-- WhatsApp floating button -->
-<a href="https://wa.me/8950496914" target="_blank" class="whatsapp-button" aria-label="Chat on WhatsApp">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" />
-</a>
-
+  <a href="https://wa.me/8950496914" target="_blank" aria-label="Chat on WhatsApp" class="whatsapp-button">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp Icon" />
+  </a>
 </body>
 </html>
